--- a/services/user/package.json
+++ b/services/user/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "drizzle-kit": "^0.20.14",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
