more changes to dockerfile.

--- a/services/whiteboard/Dockerfile
+++ b/services/whiteboard/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.11.3
 
 ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE 1
 
 RUN mkdir /whiteboard_service
 
@@ -10,5 +11,8 @@ ADD . /whiteboard_service/
 
 RUN pip install -r requirements.txt
 
-ENV PORT=8080
-EXPOSE 8080
+EXPOSE 8000
+CMD python manage.py makemigrations && \
+python manage.py migrate && \
+| python manage.py shell && \
+python manage.py runserver 0.0.0.0:8000
