--- a/services/whiteboard/Dockerfile
+++ b/services/whiteboard/Dockerfile
@@ -11,8 +11,4 @@ ADD . /whiteboard_service/
 
 RUN pip install -r requirements.txt
 
-EXPOSE 8000
-CMD python manage.py makemigrations && \
-python manage.py migrate && \
-| python manage.py shell && \
-python manage.py runserver 0.0.0.0:8000
+CMD python manage.py runserver 0.0.0.0:8000
