--- a/services/whiteboard/Dockerfile
+++ b/services/whiteboard/Dockerfile
@@ -11,4 +11,4 @@ ADD . /whiteboard_service/
 
 RUN pip install -r requirements.txt
 
-CMD python manage.py runserver 0.0.0.0:8080
+CMD daphne -b 0.0.0.0 -p 8080 whiteboard.asgi:application
