--- a/services/user/.env
+++ b/services/user/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres:Ikenna7@postgres@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:Ikenna7@postgres@localhost:5432/user_test
 PORT=5000
