--- a/services/user/package.json
+++ b/services/user/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Parm-S-Gidda/Board-Talk#readme",
   "dependencies": {
     "@types/node": "^20.11.25",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "express": "^4.18.3",
