--- a/services/user/package.json
+++ b/services/user/package.json
@@ -27,11 +27,14 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "express": "^4.18.3",
+    "pg": "^8.11.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.2",
     "@types/uuid": "^9.0.8",
     "drizzle-kit": "^0.20.14",
     "nodemon": "^3.1.0",
