Add docker file

--- a/services/user/Dockerfile
+++ b/services/user/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /usr/user
 COPY package.json .
 RUN npm install
 COPY . .
-EXPOSE 5000
+ENV PORT=8080
+EXPOSE 8080
 RUN npm run build
 CMD ["node", "./dist/src/app.js"]
