--- a/services/question/package.json
+++ b/services/question/package.json
@@ -24,8 +24,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.26",
+    "@types/pg": "^8.11.2",
     "drizzle-kit": "^0.20.14",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
