--- a/services/question/.env
+++ b/services/question/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:test@34.31.64.171/postgres
 PORT=7000
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\16045\Downloads\Board-Talk\services\question\datastore.json
