--- a/services/question/package.json
+++ b/services/question/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/datastore": "^8.5.0",
     "@types/uuid": "^9.0.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
