--- a/services/user/.env
+++ b/services/user/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:test@34.69.128.160/postgres
 PORT=5000
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\16045\Downloads\Board-Talk\services\user\datastore.json
