--- a/services/user/package.json
+++ b/services/user/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Parm-S-Gidda/Board-Talk#readme",
   "dependencies": {
+    "@google-cloud/datastore": "^8.5.0",
     "@types/node": "^20.11.25",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
