--- a/services/user/package.json
+++ b/services/user/package.json
@@ -23,8 +23,10 @@
   "homepage": "https://github.com/Parm-S-Gidda/Board-Talk#readme",
   "dependencies": {
     "@google-cloud/datastore": "^8.5.0",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/node": "^20.11.25",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
