--- a/services/question/package.json
+++ b/services/question/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^8.5.0",
+    "@types/compression": "^1.7.5",
     "@types/uuid": "^9.0.8",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
