forgot to commit these files.

--- a/services/user/package.json
+++ b/services/user/package.json
@@ -9,7 +9,7 @@
     "db:studio": "drizzle-kit studio",
     "build": "npx tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon -r dotenv/config src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,13 @@
   "homepage": "https://github.com/Parm-S-Gidda/Board-Talk#readme",
   "dependencies": {
     "@google-cloud/datastore": "^8.5.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/node": "^20.11.25",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.1",
     "express": "^4.18.3",
-    "pg": "^8.11.3",
-    "uuid": "^9.0.1",
+    "firebase": "^10.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
